more on parse-data & taid => akey

--- a/cut-object.html
+++ b/cut-object.html
@@ -133,7 +133,7 @@ doesn't have a worker, but it uses a similar system.
     		},
             cut_file: {
                 type: String,
-                value: "",  //taid
+                value: "",  //akey
             },
             n_spikes: {
                 type: Number,
