--- a/tile-wall.html
+++ b/tile-wall.html
@@ -104,19 +104,19 @@ groups is an array of objects with the following properties:
             },
             spike_times: {
 				type: Object,
-                value: function(){ return {};} // data (taid), timebase
+                value: function(){ return {};} // data (akey), timebase
             },
             pos_xy: {
                 type: Object,
-                value: function(){ return {};} // data (taid), timebase, and units_per_cm
+                value: function(){ return {};} // data (akey), timebase, and units_per_cm
             },
             pos_dir: {
                 type: Object,
-                value: function(){ return {};} // data (taid), timebase
+                value: function(){ return {};} // data (akey), timebase
             },
             pos_speed: {
                 type: Object,
-                value: function(){ return {};} // data (taid), timebase
+                value: function(){ return {};} // data (akey), timebase
             },
             data_for_gl: {
                 type: Object,
