--- a/typed-array-manager.html
+++ b/typed-array-manager.html
@@ -17,7 +17,7 @@ using normal keys...and then you would need to do manual garbage collection agai
 
 <link rel="import" href="bower_components/polymer/polymer.html">
 
-<dom-module id="typed-array-manager">
+<dom-module akey="typed-array-manager">
 <template>
 </template>
 <script>
@@ -27,11 +27,11 @@ using normal keys...and then you would need to do manual garbage collection agai
 (function(){
 
     var arrays = {};
-    var last_id = 0;
+    var last_akey = 0;
     var suffix = " (ta-manager)"; // can drop suffix using parseInt
-    var validate_id = function(id){
-        if((id + "").indexOf(suffix) === -1)
-            throw "typed-array-manager was passed invalid id";
+    var validate_akey = function(akey){
+        if((akey + "").indexOf(suffix) === -1)
+            throw "typed-array-manager was passed invalid akey";
         return true;
     }
 
@@ -46,22 +46,22 @@ using normal keys...and then you would need to do manual garbage collection agai
             // using the closure, not using the polymer element.  This means we have a singleton.
         },
         store_array: function(arr){
-            arrays[++last_id] = arr;
-            return last_id + suffix;
+            arrays[++last_akey] = arr;
+            return last_akey + suffix;
         },
-        get_array: function(id){
-            return validate_id(id) && arrays[parseInt(id)];
+        get_array: function(akey){
+            return validate_akey(akey) && arrays[parseInt(akey)];
         },
-        get_array_clone: function(id){
+        get_array_clone: function(akey){
             // note that the clone is not put in the store. It is
             // inteded to be used when dealing with workers, and needing to 
             // transfer an array in its intereity to another thread.
-            var a = this.get_array(id);
+            var a = this.get_array(akey);
             return a && new a.constructor(a);
         },
-        free_array: function(id){
-            validate_id(id);
-            delete arrays[parseInt(id)];
+        free_array: function(akey){
+            validate_akey(akey);
+            delete arrays[parseInt(akey)];
         }
     });
 
